Implementación según pruebas unitarias