@@ -5,80 +5,74 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 public class Publicacion {
-    private final String id;
+    private final String id;  // Cambiado a String para UUID
     private Usuario usuario;
     private Closet closet;
     private boolean activa;
     private LocalDateTime fechaPublicacion;
 
     public Publicacion(Usuario usuario, Closet closet) {
-        this.id = UUID.randomUUID().toString();
+        this.id = UUID.randomUUID().toString(); // Prueba 8
         this.usuario = usuario;
         this.closet = closet;
-        this.activa = true;
+        this.activa = true; // Prueba 2
         this.fechaPublicacion = LocalDateTime.now();
     }
 
+    // ----- Métodos para las pruebas -----
     public static List<Publicacion> filtrarPublicaciones(List<Publicacion> publicaciones, Usuario usuarioActual) {
-        return List.of(new Publicacion(null, null));
+        if (publicaciones == null) return List.of(); // Prueba 1
+        return publicaciones.stream()
+                .filter(Publicacion::isActiva) // Prueba 2
+                .filter(p -> usuarioActual == null || !p.getUsuario().equals(usuarioActual)) // Prueba 3
+                .sorted(Comparator.comparing(Publicacion::getFechaPublicacion).reversed()) // Prueba 6
+                .collect(Collectors.toList());
     }
 
+    // Método para Test 4
+    public static List<Prenda> filtrarPorNombre(Closet closet, String nombre) {
+        if (closet == null || nombre == null) return List.of();
 
-    public static List<Prenda> filtrarPorNombre(String nombre) {
-        return List.of();
+        try {
+            return closet.getPrendas().stream()
+                    .filter(p -> p != null && p.getNombre().toLowerCase().contains(nombre.toLowerCase()))
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            return List.of();
+        }
     }
 
+    // Método para Test 5 (versión definitiva)
     public static List<Prenda> filtrarPorCategoria(Closet closet, String categoria) {
-        return List.of();
+        // 1. Validaciones básicas
+        if (closet == null || categoria == null) {
+            return Collections.emptyList();
+        }
+
+        // 2. Obtención segura de prendas
+        List<Prenda> prendas;
+        try {
+            prendas = closet.getPrendas(); // Usa el getter existente
+            if (prendas == null) {
+                return Collections.emptyList();
+            }
+        } catch (Exception e) {
+            return Collections.emptyList();
+        }
+
+        // 3. Filtrado real (case-insensitive)
+        return prendas.stream()
+                .filter(Objects::nonNull) // Filtra prendas nulas
+                .filter(p -> p.getCategoria() != null) // Filtra categorías nulas
+                .filter(p -> p.getCategoria().equalsIgnoreCase(categoria))
+                .collect(Collectors.toList());
     }
 
-    public Long getId() {
-        return 0L;
-    }
-
-    public Usuario getUsuario() {
-        return new Usuario("", "", "", "");
-    }
-
-
-    public void setUsuario(Usuario usuario) {
-        this.usuario = usuario;
-    }
-
-    public Closet getCloset() {
-        return closet;
-    }
-
-    public void setCloset(Closet closet) {
-        this.closet = closet;
-    }
-
-    public boolean isActiva() {
-        return activa;
-    }
-
-    public void setActiva(boolean activa) {
-        this.activa = activa;
-    }
-
-    public LocalDateTime getFechaPublicacion() {
-        return fechaPublicacion;
-    }
-
-    public void setFechaPublicacion(LocalDateTime fechaPublicacion) {
-        this.fechaPublicacion = fechaPublicacion;
-    }
-
-    @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (o == null || getClass() != o.getClass()) return false;
-        Publicacion that = (Publicacion) o;
-        return Objects.equals(id, that.id);
-    }
-
-    @Override
-    public int hashCode() {
-        return Objects.hash(id);
-    }
+    // ----- Getters -----
+    public String getId() { return id; } // Prueba 8
+    public Usuario getUsuario() { return usuario; } // Prueba 7
+    public boolean isActiva() { return activa; }
+    public void setActiva(boolean activa) { this.activa = activa; }
+    public LocalDateTime getFechaPublicacion() { return fechaPublicacion; }
+    public void setFechaPublicacion(LocalDateTime fecha) { this.fechaPublicacion = fecha; }
 }
